--- a/index.html
+++ b/index.html
@@ -2,22 +2,22 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="/vite.svg" />
+    <link rel="icon" type="image/png" href="/Styles/emblem.png" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta name="description" content="COZ COUTURE - Crafted with Purpose. Connecting the world to India's finest textiles and craftsmanship." />
     <meta name="keywords" content="textiles, Indian textiles, handloom, B2B, manufacturing, apparel, fabrics" />
     <meta name="theme-color" content="#F37E3A" />
 
     <!-- Open Graph -->
-    <meta property="og:title" content="COZ COUTURE - Indian Textiles & Craftsmanship" />
-    <meta property="og:description" content="Crafted with Purpose. Thinking Global, Acting Local. Premium Indian textiles for global markets." />
+    <meta property="og:title" content="COZ COUTURE" />
+    
     <meta property="og:type" content="website" />
 
     <!-- Preconnect to external resources -->
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link rel="preconnect" href="https://images.unsplash.com" />
 
-    <title>COZ COUTURE | Indian Textiles & Craftsmanship</title>
+    <title>COZ COUTURE</title>
   </head>
   <body>
     <div id="root"></div>
